# CG

./: .gitignore  README.md  run.py
Fase_1/src/: CMakeLists.txt
Fase_1/src/engine/: config.cpp  config.hpp  engine.cpp
Fase_1/src/generator/: cone.cpp  generator.cpp  plane.hpp  sphere.cpp  sphere.hpp
Fase_1/src/utils/: figure.cpp  figure.hpp  point.cpp  point.hpp
Fase_1/test_files/: cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_10_10.3d
Fase_2/src/: CMakeLists.txt
Fase_2/src/engine/: config.cpp  engine.cpp  group.cpp  transform.cpp  transform.hpp
Fase_2/src/generator/: box.cpp  generator.cpp  plane.cpp  ring.cpp
Fase_2/src/utils/: figure.cpp  figure.hpp  point.cpp  point.hpp
Fase_2/test_files/: box_2_3.3d  planets_and_sun.json  ring_10_15_20.3d  ring_10_25_20.3d  ring_1_1_20.3d  solar-system-json-to-xml.py  solar_system.xml  sphere_1_12_12.3d  sphere_1_20_20.3d  sphere_1_5_5.3d  sphere_1_6_6.3d  sphere_1_8_8.3d  test_2_5.xml  test_2_6.xml
Fase_3/src/: CMakeLists.txt
Fase_3/src/engine/: config.cpp  config.hpp  engine.cpp  group.hpp  transform.cpp  transform.hpp
Fase_3/src/generator/: bezier.cpp  bezier.hpp  box.hpp  cone.hpp  generator.cpp  ring.hpp
Fase_3/src/utils/: figure.cpp  figure.hpp  matrix.cpp  point.cpp  point.hpp
Fase_3/test_files/: bezier_10.3d  planets_and_sun.json  ring_3_4_20.3d  solar-system-json-to-xml.py  test_3_3.xml  test_3_5.xml
Fase_4/src/: CMakeLists.txt
Fase_4/src/engine/: config.cpp  config.hpp  engine.cpp  group.cpp  group.hpp
Fase_4/src/generator/: bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  plane.cpp  plane.hpp  ring.cpp  ring.hpp  sphere.cpp  sphere.hpp
Fase_4/src/utils/: figure.cpp  figure.hpp  light.cpp  light.hpp  matrix.hpp  point.cpp  point.hpp
Fase_4/test_files/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  cone_2_3_10_7.3d  plane_2_3.3d  planets_and_sun.json  ring_3_4_20.3d  solar-system-json-to-xml.py  sphere_1_12_12.3d  sphere_1_20_20.3d  sphere_1_21_21.3d  sphere_1_5_5.3d  sphere_1_8_8.3d  sphere_2_10_10.3d  test_4_7.xml  test_4_8.xml
